Logo alignment fix

--- a/style.css
+++ b/style.css
@@ -287,7 +287,7 @@ a:hover {
 }
 
 .navigation-bar ul {
-  padding: 0 8% 0 8%;  
+  padding: 0 5% 0 8%;  
 }
 
 .navigation-bar ul li {
